# qhyccd-alpaca

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: codecov.yml
.github/workflows/: check.yml  conformu.yml  safety.yml  scheduled.yml  test.yml
docs/: qhyccd-alpaca-rs.md
src/: lib.rs  main.rs  mocks.rs  test_camera.rs  test_filter_wheel.rs  tests.rs
src/tests/: mod.rs  server.rs
src/tests/camera/: binning.rs  connection.rs  exposure.rs  gain_offset.rs  image.rs  mod.rs  properties.rs  readout.rs  roi.rs  sensor.rs  temperature.rs
src/tests/filter_wheel/: configuration.rs  connection.rs  mod.rs  position.rs
tests/: README.md  camera_tests.rs  conformu_integration.rs
tests/camera/: bayer.rs  binning.rs  connection.rs  exposure.rs  gain_offset.rs  image.rs  mod.rs  properties.rs  roi.rs  temperature.rs
tests/common/: camera_mocks.rs  mod.rs
