[package]
name = "qhyccd-alpaca"
version = "0.1.3"
authors = ["Igor von Nyssen<igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["qhyccd", "astronomy", "camera", "ASCOM", "alpaca"]
repository = "https://github.com/ivonnyssen/qhyccd-alpaca"
documentation = "https://docs.rs/qhyccd-alpaca"
description = """
ASCOM Alpaca driver for QHYCCD cameras and filter wheels.
"""
categories = ["aerospace"]
homepage = "https://github.com/ivonnyssen/qhyccd-alpaca/wiki"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascom-alpaca = { version = "1.0.0-beta.6", features = [
  "server",
  "camera",
  "filter_wheel",
] }
async-trait = "0.1.85"
custom_debug = "0.6.2"
eyre = "0.6.12"
qhyccd-rs = "0.1.6"
ndarray = "0.16.1"
parking_lot = "0.12.3"
strum = "0.27.2"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = "0.3.19"
cfg-if = "1.0.0"
educe = "0.6.0"
clap = { version = "4.5.27", features = ["derive"] }

#to make minimal versions happy
time = "0.3.35"

[dev-dependencies]
mockall = { version = "0.13.1", features = [] }
rstest = "0.26.1"
