[package]
name = "qhyccd-alpaca"
version = "0.1.3"
authors = ["Igor von Nyssen<igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
  "qhyccd",
  "astronomy",
  "camera",
  "ASCOM",
  "alpaca",
  "astrophotography",
]
repository = "https://github.com/ivonnyssen/qhyccd-alpaca"
documentation = "https://docs.rs/qhyccd-alpaca"
description = """
ASCOM Alpaca driver for QHYCCD cameras and filter wheels.
"""
categories = ["aerospace"]
homepage = "https://github.com/ivonnyssen/qhyccd-alpaca/wiki"
edition = "2024"
rust-version = "1.87.0"
exclude = ["/.github", "/.vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascom-alpaca = { version = "1.0.0-beta.10", features = [
  "server",
  "camera",
  "filter_wheel",
  "test",
] }
async-trait = "0.1.89"
custom_debug = "0.6.2"
eyre = "0.6.12"
qhyccd-rs = { path = "../qhyccd-rs", features = ["simulation"] }
ndarray = "0.17.1"
parking_lot = "0.12.5"
strum = "0.27.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
cfg-if = "1.0.4"
educe = "0.6.0"
clap = { version = "4.5.51", features = ["derive"] }

#to make minimal versions happy
time = "0.3.44"
bytes = "1.7.0"
openssl-sys = "0.9.80"
openssl = "0.10.60"

[dev-dependencies]
mockall = { version = "0.14.0", features = [] }
rstest = "0.26.1"
reqwest = "0.12.0"
tokio = { version = "1.48.0", features = ["process"] }
